[gd_scene load_steps=7 format=3 uid="uid://dkw4tlmudbssg"]

[ext_resource type="Script" path="res://game/hud/hud.gd" id="1_eqjgb"]
[ext_resource type="Script" path="res://game/components/coin_ui_component.gd" id="2_56jhy"]
[ext_resource type="Script" path="res://game/components/held_button_activator_component.gd" id="3_4quje"]
[ext_resource type="Script" path="res://game/components/ball_ui_component.gd" id="3_c0o5s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3qso7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a72a5"]

[node name="HUD" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eqjgb")

[node name="TopPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TopPanel"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="HBoxContainer" type="HBoxContainer" parent="TopPanel/MarginContainer"]
layout_mode = 2

[node name="CoinLabel" type="Label" parent="TopPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "999999999999"

[node name="CoinUIComponent" type="Control" parent="TopPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("2_56jhy")

[node name="VSeparator" type="VSeparator" parent="TopPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_3qso7")

[node name="BallUIComponent" type="Control" parent="TopPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("3_c0o5s")

[node name="NumBallsLabel" type="Label" parent="TopPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "999999999999"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_a72a5")

[node name="BottomPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BottomPanel"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="BallsDownButton" type="TextureButton" parent="BottomPanel/MarginContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
stretch_mode = 5

[node name="BallsDownHeldButtonActivator" type="Node2D" parent="BottomPanel/MarginContainer/CenterContainer/HBoxContainer/BallsDownButton"]
script = ExtResource("3_4quje")

[node name="Label" type="Label" parent="BottomPanel/MarginContainer/CenterContainer/HBoxContainer/BallsDownButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShotLinesButton" type="TextureButton" parent="BottomPanel/MarginContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="BottomPanel/MarginContainer/CenterContainer/HBoxContainer/ShotLinesButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "L"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FireBallButton" type="TextureButton" parent="BottomPanel/MarginContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="BottomPanel/MarginContainer/CenterContainer/HBoxContainer/FireBallButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "F"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KillBottomRowButton" type="TextureButton" parent="BottomPanel/MarginContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="BottomPanel/MarginContainer/CenterContainer/HBoxContainer/KillBottomRowButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "K"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PassthroughButton" type="TextureButton" parent="BottomPanel/MarginContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="BottomPanel/MarginContainer/CenterContainer/HBoxContainer/PassthroughButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "P"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="BottomPanel/MarginContainer/CenterContainer/HBoxContainer/BallsDownButton/BallsDownHeldButtonActivator" to="." method="_on_balls_down_held_button_activator_pressed"]
[connection signal="pressed" from="BottomPanel/MarginContainer/CenterContainer/HBoxContainer/ShotLinesButton" to="." method="_on_shot_lines_button_pressed"]
[connection signal="pressed" from="BottomPanel/MarginContainer/CenterContainer/HBoxContainer/FireBallButton" to="." method="_on_fire_ball_button_pressed"]
[connection signal="pressed" from="BottomPanel/MarginContainer/CenterContainer/HBoxContainer/KillBottomRowButton" to="." method="_on_kill_bottom_row_button_pressed"]
[connection signal="pressed" from="BottomPanel/MarginContainer/CenterContainer/HBoxContainer/PassthroughButton" to="." method="_on_passthrough_button_pressed"]
